--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,8 +2,8 @@
 
 <app-topo></app-topo>
 <div class="col">
-<a routerLink="['/listDelivery']" class="col-2">Produtos</a>
-<a routerLink="['/listItems']">Items</a>
+<a routerLink="/listDelivery" class="col-2">Produtos</a>
+<a routerLink="/listItems">Items</a>
 </div>
 <router-outlet></router-outlet>
 </div>
