--- a/src/app/list-items/new-item/new-item.component.html
+++ b/src/app/list-items/new-item/new-item.component.html
@@ -25,7 +25,7 @@
                         <p class="alert alert-danger mt-2">Esse campo é requerido</p>
                     </div>
                 </div>
-                    <button class="btn btn-info">Cadastrar item</button>
+                    <button class="btn btn-warning">Cadastrar item</button>
             </form>
         </div>
     </div>
