--- a/src/app/list-product/list-product.component.html
+++ b/src/app/list-product/list-product.component.html
@@ -3,7 +3,7 @@
     <h3 class="col text-center m-0">Encomendas</h3>
     <div class="text-right mb-2">
       <a routerLink="/users"><button class="btn btn-warning mr-2">Voltar</button></a>
-      <a href="/registerDelivery"><button class="btn btn-warning">Cadastrar nova entrega</button></a>
+      <a routerLink="/registerDelivery"><button class="btn btn-warning">Cadastrar nova entrega</button></a>
     </div>
   </div>
   <table class="table table-striped table-dark">
