--- a/src/app/list-product/edit-list-product/edit-list-product.component.html
+++ b/src/app/list-product/edit-list-product/edit-list-product.component.html
@@ -1,102 +1,111 @@
 <div class="container">
     <h4 class="mt-5">Detalhes</h4>
-<div class="row">
-    <div class="col-md-6">
-        <table class="table table-bordered">
-            <tr>
-                <td>Id</td>
-                <td>{{del.id}}</td>
-            </tr>
-            <tr>
-                <td>Nome</td>
-                <td><strong>{{del.name}}</strong></td>
-            </tr>
-            <tr>
-                <td>Local</td>
-                <td>{{del.local}}</td>
-            </tr>
-            <tr>
-                <td>Telefone</td>
-                <td>{{del.phone}}</td>
-            </tr>
-            <tr>
-                <td>Hora</td>
-                <td>{{del.hora}}</td>
-            </tr>
-            <tr>
-                <td>Status</td>
-                <td>{{del.status}}</td>
-            </tr>
-            <tr>
-                <td>Item</td>
-                <td>{{del.itemName}}</td>
-            </tr>
-        </table>
-    </div>
-    <div class="col-md-6">
-        <form action="" method="post" #form="ngForm" (ngSubmit)="update(form)" novalidate>
+    <div class="row">
+        <div class="col-md-6">
             <table class="table table-bordered">
                 <tr>
+                    <td>Id</td>
+                    <td>{{del.id}}</td>
+                </tr>
+                <tr>
                     <td>Nome</td>
-                    <td>
-                        <div class="form-group">                            
-                            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="del.name" #name="ngModel" required minlength="3">
-                            <div class="" *ngIf="form.submitted && name.invalid">
-                                <p class="alert alert-danger mt-2" *ngIf="name.errors.required">Esse campo é requerido</p>
-                            </div>
-                        </div>
-                    </td>
+                    <td><strong>{{del.name}}</strong></td>
                 </tr>
                 <tr>
                     <td>Local</td>
-                    <td>
-                        <div class="form-group">                            
-                            <input type="text" class="form-control" id="local" name="local" [(ngModel)]="del.local" #local="ngModel" required minlength="3">
-                            <div class="" *ngIf="form.submitted && local.invalid">
-                                <p class="alert alert-danger mt-2" *ngIf="local.errors.required">Esse campo é requerido</p>
-                            </div>
-                        </div>
-                    </td>
+                    <td>{{del.local}}</td>
                 </tr>
                 <tr>
                     <td>Telefone</td>
-                    <td>
-                        <div class="form-group">                            
-                            <input type="tel" class="form-control" id="phone" name="phone" [(ngModel)]="del.phone" #phone="ngModel" required minlength="3">
-                            <div class="" *ngIf="form.submitted && phone.invalid">
-                                <p class="alert alert-danger mt-2" *ngIf="phone.errors.required">Esse campo é requerido</p>
-                            </div>
-                        </div>
-                    </td>
+                    <td>{{del.phone}}</td>
                 </tr>
                 <tr>
                     <td>Hora</td>
-                    <td>
-                        <div class="form-group">
-                            <input type="time" class="form-control" id="hora" name="hora" [(ngModel)]="del.hora" #hora="ngModel" required minlength="3">
-                            <div class="" *ngIf="form.submitted && hora.invalid">
-                                <p class="alert alert-danger mt-2" *ngIf="hora.errors.required">Esse campo é requerido</p>
-                            </div>
-                        </div>
-                    </td>
+                    <td>{{del.hora}}</td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td>{{del.status}}</td>
                 </tr>
                 <tr>
                     <td>Item</td>
-                    <td>
-                        <div class="form-group">
-                            <label for="atual">Substituir</label>
-                           <select name="itemId" [(ngModel)]="del.itemId" #itemId="ngModel" id="itemId" class="form-control">                        
-                                 <option *ngFor="let item of items" value="{{item.id}}" >{{item.name}}</option>                              
-                           </select>                        
-                        </div>
-                    </td>
+                    <td>{{del.itemName}}</td>
                 </tr>
-            </table>            
-            <div class="form-group  text-right">
-                <button routerLink="/listDelivery" class="btn btn-warning mr-2">Voltar</button>
-                <button type="submit" class="btn btn-warning">Salvar alteração</button>
-            </div>
-        </form>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <form action="" method="post" #form="ngForm" (ngSubmit)="update(form)" novalidate>
+                <table class="table table-bordered">
+                    <tr>
+                        <td>Nome</td>
+                        <td>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" [(ngModel)]="del.name"
+                                    #name="ngModel" required minlength="3">
+                                <div class="" *ngIf="form.submitted && name.invalid">
+                                    <p class="alert alert-danger mt-2" *ngIf="name.errors.required">Esse campo é
+                                        requerido</p>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Local</td>
+                        <td>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="local" name="local" [(ngModel)]="del.local"
+                                    #local="ngModel" required minlength="3">
+                                <div class="" *ngIf="form.submitted && local.invalid">
+                                    <p class="alert alert-danger mt-2" *ngIf="local.errors.required">Esse campo é
+                                        requerido</p>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Telefone</td>
+                        <td>
+                            <div class="form-group">
+                                <input type="tel" class="form-control" id="phone" name="phone" [(ngModel)]="del.phone"
+                                    #phone="ngModel" required minlength="3">
+                                <div class="" *ngIf="form.submitted && phone.invalid">
+                                    <p class="alert alert-danger mt-2" *ngIf="phone.errors.required">Esse campo é
+                                        requerido</p>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Hora</td>
+                        <td>
+                            <div class="form-group">
+                                <input type="time" class="form-control" id="hora" name="hora" [(ngModel)]="del.hora"
+                                    #hora="ngModel" required minlength="3">
+                                <div class="" *ngIf="form.submitted && hora.invalid">
+                                    <p class="alert alert-danger mt-2" *ngIf="hora.errors.required">Esse campo é
+                                        requerido</p>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Item</td>
+                        <td>
+                            <div class="form-group">
+                                <label for="atual">Substituir</label>
+                                <select name="itemId" [(ngModel)]="del.itemId" #itemId="ngModel" id="itemId"
+                                    class="form-control">                                
+                                    <option *ngFor="let item of items" value="{{item.id}}">{{item.name}}</option>
+                                </select>                                
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <div class="form-group  text-right">
+                    <button routerLink="/listDelivery" class="btn btn-warning mr-2">Voltar</button>
+                    <button type="submit" class="btn btn-warning">Salvar alteração</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 </div>
