--- a/src/app/list-product/list-product.component.html
+++ b/src/app/list-product/list-product.component.html
@@ -1,4 +1,4 @@
-<div class="container-md mt-5">
+<div class="container-fluid mt-5">
   <div class="col">
     <h3 class="col text-center m-0">Encomendas</h3>
     <div class="text-right mb-2">
